--- a/templates/sequence/start.html.twig
+++ b/templates/sequence/start.html.twig
@@ -1,17 +1,12 @@
 {% extends './base.html.twig' %}
 {% block stylesheets %}
     {{ parent() }}
-    <style>
-        body {
-          display: -ms-flexbox;
-          display: flex;
-          color: #666;
-        }        
-    </style>
 {% endblock %}
 {% block body %}
     <div class="container mt-5">
         {% include './flashMessages.html.twig' %}
-        kdskdskj
+        {{ form_start(form) }}
+            {{ form_widget(form) }}
+        {{ form_end(form) }}        
     </div>
 {% endblock %}
